--- a/pages/places.html
+++ b/pages/places.html
@@ -4,26 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/style/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Romania</title>
+    <title>Explore</title>
 </head>
 <body>
-    <aside>
-        <a href="#" class="special">Explore</a>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Places</a></li>
-          <li><a href="#">Video</a></li>
-          <li><a href="#">Locations</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Book</a></li>
-          <li><a href="#">Photos</a></li>
-        </ul>
-        <a href="#" class="special">Learn More</a>
-      </aside>
+    <img src="https://lp-cms-production.imgix.net/2019-06/58508624.jpg?fit=crop&q=70&auto=format&w=926&h=305&dpr=1.25" class="img-fluid" alt="...">
+
+    <h1 class="text-center">Explore Romania</h1>
+    <iframe src="https://www.google.com/maps/d/embed?mid=1fDGIyzyHbrWUxYA0OTQw7lL0j2G0CPf5&ehbc=2E312F" width="640" height="480"></iframe>
 </body>
-<script src="/script.js"></script>
+<script src="/script/script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </html>
