add content to the places page

--- a/pages/index.html
+++ b/pages/index.html
@@ -14,7 +14,15 @@
   <title>Tourism Romania</title>
 </head>
 
-<body class="body-1">
+<body class="body_index">
+  <div class="clouds">
+    <div class="cloud1"></div>
+    <div class="cloud2"></div>
+    <div class="cloud3"></div>
+    <div class="cloud4"></div>
+    <div class="cloud5"></div>
+    <div class="cloud6"></div>
+  </div>
   <aside>
     <img src="/image/logo..png" class="logo">
     <ul>
@@ -29,11 +37,14 @@
     <a href="#" class="special">See more</a>
   </aside>
   <div class="container">
-    <div class="title">
+    <!-- <div class="title">
       <span style="color:blue;">I</span>
       <span style="color:yellow;">love</span>
       <span style="color:red;" class="typing"></span>
-    </div>
+    </div> -->
+    <h1 class="country">
+      <span style="color:blue;">Ro</span><span style="color:yellow;">mâ</span><span style="color:red;">nia</span>
+    </h1>
   </div>
 
 </body>
