--- a/pages/index.html
+++ b/pages/index.html
@@ -2,56 +2,47 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/style/style.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.js"
-    integrity="sha512-ggJ7yQCnXifbDXFFfyNhegaNXkkPMP+0cxMDobX6pABvU4zrqD+NMXxrGoAK9iANboRjpR4ajwWHCCfJXJFpJQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <title>Tourism Romania</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.js" integrity="sha512-ggJ7yQCnXifbDXFFfyNhegaNXkkPMP+0cxMDobX6pABvU4zrqD+NMXxrGoAK9iANboRjpR4ajwWHCCfJXJFpJQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <title>Tourism Romania</title>
 </head>
 
 <body class="body_index">
-  <div class="clouds">
-    <div class="cloud1"></div>
-    <div class="cloud2"></div>
-    <div class="cloud3"></div>
-    <div class="cloud4"></div>
-    <div class="cloud5"></div>
-    <div class="cloud6"></div>
-  </div>
-  <aside>
-    <img src="/image/logo..png" class="logo">
-    <ul>
-      <li><a href="/pages/index.html">Home</a></li>
-      <li><a href="/pages/places.html">Places</a></li>
-      <li><a href="#">Video</a></li>
-      <li><a href="#">Locations</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Book</a></li>
-      <li><a href="#">Photos</a></li>
-    </ul>
-    <a href="#" class="special">See more</a>
-  </aside>
-  <div class="container">
-    <!-- <div class="title">
-      <span style="color:blue;">I</span>
-      <span style="color:yellow;">love</span>
-      <span style="color:red;" class="typing"></span>
-    </div> -->
-    <h1 class="country">
-      <span style="color:blue;">Ro</span><span style="color:yellow;">mâ</span><span style="color:red;">nia</span>
-    </h1>
-  </div>
-
+    <div class="clouds">
+        <div class="cloud1"></div>
+        <div class="cloud2"></div>
+        <div class="cloud3"></div>
+        <div class="cloud4"></div>
+        <div class="cloud5"></div>
+        <div class="cloud6"></div>
+    </div>
+    <div class="row">
+        <div class="col-2">
+            <aside>
+                <!-- <img src="/image/logo..png" class="logo"> -->
+                <ul>
+                    <li><a href="/pages/index.html">Acasă</a></li>
+                    <li><a href="#">Despre</a></li>
+                    <li><a href="/pages/places.html">Orașe</a></li>
+                    <li><a href="#">Video</a></li>
+                    <li><a href="#">Anichități</a></li>
+                    <li><a href="#">Fotografii</a></li>
+                </ul>
+            </aside>
+        </div>
+        <div class="col-md-9 text-center m-auto">
+            <h1 class="country">
+                <span style="color:blue;">Ro</span><span style="color:yellow;">mâ</span><span style="color:red;">nia</span>
+            </h1>
+        </div>
+    </div>
 </body>
 <script src="/script/script.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-  integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-  integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 
 </html>
